<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
    <!-- Set track as ringtone -->
    <string name="set_as_ringtone">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" 设置为手机铃声</string>
    
    
    <!-- Headers -->
    <string name="album_header">专辑列表</string>
    <string name="track_header">曲目列表</string>
    
     <!-- Used to indicate the number of songs for an album -->

    <plurals name="Nsongs">

        <!-- Number of songs is one -->
        <item quantity="one">1 首歌曲</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> 首歌曲</item>
    </plurals>
    <!-- Used to indicate the number of albums for an artist -->
    <plurals name="Nalbums">

        <!-- Number of albums is one -->
        <item quantity="one">1 张专辑</item>
        <!-- Number of albums is more than one -->
        <item quantity="other"><xliff:g id="count">%d</xliff:g> 张专辑</item>
    </plurals>
    
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="app_name">LLMedia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	
    <string name="media_search">搜索</string>
    
    <string name="widget_style_dark">Holo Dark</string>
    <string name="widget_style_light">Holo Light</string>
    
    <!-- Options MenuItems -->
    <string name="settings">设置</string>
    <string name="shuffle_all">全部随机播放</string>
    <string name="share">分享</string>
    <string name="play_store">Play 商店</string>
    <!-- Settings -->
    <string name="about">关于 Apollo</string>
    <string name="eqalizer">均衡器</string>
    <string name="header_interface">界面</string>
    <string name="themes">主题</string>
    <string name="apollo_themes">选择 Apollo 的主题</string>
    <string name="select_theme">选择您的主题</string>
    <string name="version">Apollo 版本</string>
    
    <!-- Content descriptions for the Bottom Action Bar -->
    <string name="cd_favorite">标记为喜爱的</string>
    <string name="cd_search">搜索您的音乐库</string>
    <string name="cd_overflow">更多选项</string>
    <string name="cd_bottom_action_bar_album_art">专辑图片</string>
    <string name="cd_repeat">重复一首或全部</string>
    <string name="cd_previous">前一首</string>
    <string name="cd_play">暂停/继续</string>
    <string name="cd_next">下一首</string>
    <string name="cd_shuffle">随机播放</string>
    
    <!-- ContextMenu items -->
    <string name="play_all">全部播放</string>
    <string name="add_to_playlist">添加到播放列表</string>
    <string name="use_as_ringtone">设置为手机铃声</string>
    <string name="delete_playlist">删除播放列表</string>
    <string name="search">搜索</string>
    <string name="remove">从播放列表中移除</string>
    
     <!-- Tabs -->
    <string name="tab_recent">Recent</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_playlists">Playlists</string>
    <string name="tab_genres">Genres</string>
    
    <!-- Visualizations -->
    <string name="visual_none">None</string>
    <string name="visual_bargraph">Bar Graph</string>
    <string name="visual_solidbargraph">Solid Bar Graph</string>
    <string name="visual_waveform">Waveform</string>
</resources>
