<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/apollo_holo_light_search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/media_search"/>
    
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/apollo_holo_light_overflow"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/cd_overflow">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/action_eqalizer"
                android:title="@string/eqalizer"/>
            <item
                android:id="@+id/action_shuffle_all"
                android:title="@string/shuffle_all"/>
        </menu>
    </item>

</menu>